Propagate headings font to infoBulles

--- a/marginInfoBulle.sty
+++ b/marginInfoBulle.sty
@@ -87,7 +87,7 @@
 				\parbox{\linewidth}{%
 					\mbox{}%
 					\parbox[t]{.5cm}{\leavevmode\color{#3}#2}%
-					\parbox[t]{\linewidth-.5cm}{\bfseries\IfNoValueTF{#5}{#4}{#5}}%
+					\parbox[t]{\linewidth-.5cm}{\fontfamily{\headingsFont}\selectfont\bfseries\IfNoValueTF{#5}{#4}{#5}}%
 				}%
 			}]%
 			#6%
