--- a/infoBulle.sty
+++ b/infoBulle.sty
@@ -187,6 +187,7 @@
 \setlength{\yIconHorizontalOffset}{.73cm}
 % General Command
 \DeclareDocumentCommand{\@titleContent}{m m m}{%
+	\fontfamily{\headingsFont}\selectfont
 	\ifinfoBulleMarginIcons
 		\llap{#2\hspace*{\yIconHorizontalOffset}}%
 		\mbox{}%
@@ -377,7 +378,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{theorem}}{\thetheorem}{#1}
+		frametitle=\@titleContentMath{theorem}{\thetheorem}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -394,7 +395,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{lemma}}{\thelemma}{#1}
+		frametitle=\@titleContentMath{lemma}{\thelemma}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -411,7 +412,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{corollary}}{\thecorollary}{#1}
+		frametitle=\@titleContentMath{corollary}{\thecorollary}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -428,7 +429,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{definition}}{\thedefinition}{#1}
+		frametitle=\@titleContentMath{definition}{\thedefinition}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -445,7 +446,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{axiom}}{\theaxiom}{#1}
+		frametitle=\@titleContentMath{axiom}{\theaxiom}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -462,7 +463,7 @@
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{\GetTranslation{proposition}}{\theproposition}{#1}
+		frametitle=\@titleContentMath{proposition}{\theproposition}{#1}
 		]\relax%
 }{%
 	\end{mdframed}%
