Update mathrm shortcuts to better handle optional argument

--- a/bmc.cls
+++ b/bmc.cls
@@ -691,12 +691,12 @@
 	\usepackage{mathtools}
 	\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 	\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-	\newcommand{\R}[1][]{\ensuremath{\mathbb{R}^{#1}}}
-	\newcommand{\N}[1][]{\ensuremath{\mathbb{N}^{#1}}}
-	\newcommand{\Z}[1][]{\ensuremath{\mathbb{Z}^{#1}}}
-	\newcommand{\C}[1][]{\ensuremath{\mathbb{C}^{#1}}}
-	\newcommand{\dd}[1][]{\ensuremath{\mathrm{d}^{#1}}}
-	\newcommand{\Lap}{\ensuremath{\mathcal{L}}}
+	\newcommand{\R}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{R}}{\mathbb{R}^{#1}}}}
+	\newcommand{\N}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{N}}{\mathbb{N}^{#1}}}}
+	\newcommand{\Z}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{Z}}{\mathbb{Z}^{#1}}}}
+	\newcommand{\C}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{C}}{\mathbb{C}^{#1}}}}
+	\newcommand{\dd}[1][]{\ensuremath{\ifstrempty{#1}{\mathrm{d}}{\mathrm{d}^{#1}}}}
+	\DeclareMathOperator{\Lap}{\mathcal{L}}
 }{}
 \ifbool{optionMathSerif}{
 	\renewcommand{\familydefault}{\rmdefault}
