Replace accidental \usepackage with \RequirePackage (caption)

--- a/bmc.cls
+++ b/bmc.cls
@@ -262,7 +262,7 @@
 \RequirePackage{grffile} % fix allowed filenames
 
 \RequirePackage{subcaption}
-\usepackage[hypcap=true]{caption}
+\RequirePackage[hypcap=true]{caption}
 
 \RequirePackage{fontawesome5}
 \RequirePackage{infoBulle}
