Fix text colour issue

--- a/bmc.cls
+++ b/bmc.cls
@@ -991,8 +991,10 @@
 }
 
 
-\color{text}
-\pagecolor{page}
+\AtBeginDocument{%
+	\color{text}
+	\pagecolor{page}
+}
 
 % Other Titling
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
