Add top margin after page break for infoBulle env

--- a/infoBulle.sty
+++ b/infoBulle.sty
@@ -169,6 +169,7 @@
 	frametitlefontcolor=infoBulleText,
 	frametitlebelowskip=0mm,
 	frametitleaboveskip=4mm,
+	splittopskip=2\topsep
 }
 \newmdenv[
 	style=infoBulle,
