Allows alignment in matricies

--- a/bmc.cls
+++ b/bmc.cls
@@ -743,6 +743,11 @@
 	\let\oldgeq\geq
 	\renewcommand{\leq}{\leqslant}
 	\renewcommand{\geq}{\geqslant}
+
+	% redefine matrix env to allow for alignment, c by default
+	\renewcommand*\env@matrix[1][c]{\hskip -\arraycolsep
+		\let\@ifnextchar\new@ifnextchar
+		\array{*\c@MaxMatrixCols #1}}
 }{}
 
 % 1mu padding
