Slightly improve how infoBulles are layed out

--- a/infoBulle.sty
+++ b/infoBulle.sty
@@ -170,7 +170,8 @@
 	frametitlefontcolor=infoBulleText,
 	frametitlebelowskip=0mm,
 	frametitleaboveskip=4mm,
-	splittopskip=2\topsep
+	splittopskip=2\topsep,
+	needspace=6em
 }
 \newmdenv[
 	style=infoBulle,
