Add utf8 input encoding

--- a/bmc.cls
+++ b/bmc.cls
@@ -750,7 +750,8 @@
 % Setup Font
 % ================
 
-\usepackage[T1]{fontenc}
+\RequirePackage[T1]{fontenc}
+\RequirePackage[utf8]{inputenc}
 % Load fonts
 \RequirePackage{plex-serif}
 \RequirePackage{plex-sans}
